Fix border sizes for top movies and login form. Fix text align for footer links

--- a/src/components/FooterLinks/FAQ.css
+++ b/src/components/FooterLinks/FAQ.css
@@ -2,11 +2,22 @@
   height: 85%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
-.FAQ-answer {
+.FAQ-title {
+  font-size: xx-large;
+}
+
+.FAQ-question {
+  font-size: x-large;
+}
+
+.FAQ-question,
+.FAQ-answer,
+.FAQ-cats-dogs {
+  text-align: center;
   margin-left: 10vw;
   margin-right: 10vw;
 }
