--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,7 +1,7 @@
 form {
   align-self: center;
   min-height: 75vh;
-  width: 50vw;
+  min-width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
